--- a/membership.html
+++ b/membership.html
@@ -56,7 +56,7 @@
                 <!--New content-->
                 
                <div class="calendar">
-                 <img src="Photos/schedule2023.png" alt="Calendar2023" width="80%">
+                 <img src="Photos/schedule2023.png" alt="Calendar2023" width="80%" border-radius="1rem">
                 </div>
 
                 <!--New content end-->
