--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   </div>
                   <div class="people__div people__div--info">
                       <h2 class="people__name">Est. 2022</h2>
-                      <p class="people__desc">Address: 44 Salmon Blvd Campbellton, NB E3N 3T7
+                      <p class="people__desc">Address: Coming soon!<!--44 Salmon Blvd Campbellton, NB E3N 3T7-->
 			      <a href="photosvideos.html">see photos</a></p>
                   </div>
                   <div class="people__div people__div--name">
