--- a/membership.html
+++ b/membership.html
@@ -49,7 +49,7 @@
         <div class="wrapper-body">
             
             <h3>
-                <a class="float-left" href="contactus.html">Click here to sign up!</a>
+                <a class="float-left" href="contactus.html">Click here for more info!</a>
             </h3>
             
             <h2>Schedule coming soon.</h2>
