--- a/contactus.html
+++ b/contactus.html
@@ -57,7 +57,7 @@
                       <label for="fname">Full name</label>
                     </div>
                     <div class="col-75">
-                      <input type="text" id="fname" name="firstname" placeholder="Full name..">
+                      <input type="text" id="fname" name="firstname" placeholder="Full name">
                     </div>
                   </div>
                   <div class="row">
@@ -65,7 +65,7 @@
                       <label for="lname">Email adress</label>
                     </div>
                     <div class="col-75">
-                      <input type="text" id="lname" name="lastname" placeholder="Email adress.." required>
+                      <input type="text" id="lname" name="lastname" placeholder="Email adress" required>
                     </div>
                   </div>
                   <div class="row">
